typescript/checker/tests/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpression2.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            32,
        ),
        hi: BytePos(
            36,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpression2.ts:1:1
  |
1 | href.match(/:\/\/(.[^/]+)/)[1];
  | ^^^^

